--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>cesar.be</groupId>
     <artifactId>Cesar_DS</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
