--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>cesar.be</groupId>
     <artifactId>Cesar_DS</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+
+    <dependencies>
+    <!-- spring mvc, rest -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    </dependencies>
 
 
 </project>
