--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <!-- spring mvc, rest -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
+
+
 </project>
