--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,7 +30,7 @@
 
 		<dependency>
 			<groupId>org.springframework.http</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
