--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
@@ -8,8 +9,8 @@
     <version>2.2.5.RELEASE</version>
 </parent>
 
-<groupId>node</groupId>
-<artifactId>rest-node</artifactId>
+<groupId>bank</groupId>
+<artifactId>bank-server</artifactId>
 <version>1.0-SNAPSHOT</version>
 <packaging>jar</packaging>
 
@@ -21,6 +22,7 @@
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
+        <version>2.2.5.RELEASE</version>
     </dependency>
 </dependencies>
 
@@ -28,7 +30,7 @@
     <plugins>
         <plugin>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.2.RELEASE</version>
             <executions>
                 <execution>
