--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 NamingClient/.idea/workspace.xml
+NamingServer/.idea/workspace.xml
+
+NamingClient/.idea/compiler.xml
+NamingServer/.idea/compiler.xml
+
+NamingClient/.idea/artifacts/NamingClient_jar.xml
+NamingServer/.idea/artifacts/NamingServer_jar.xml
